Added navigation to index page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About - mygiftbasket4u</title>
+    <title>Home - mygiftbasket4u</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -34,8 +34,9 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">My Gift Basket 4u</div>
+    <div class="address-bar">Spp Road | Ponnuru, Andhra Pradesh 522124 |<i class="fa fa-whatsapp"></i>
+        +91 8128411369</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -58,13 +59,19 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">About Us</a>
                     </li>
                     <li>
-                        <a href="blog.html">Blog</a>
+                        <a href="blog.html">Gift Baskets</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html">Return Gifts</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Food</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
