Added Description Pages

--- a/corporate.html
+++ b/corporate.html
@@ -35,7 +35,7 @@
 <body>
 
     <div class="brand">My Gift Basket 4u</div>
-    <div class="address-bar">Spp Road | Ponnuru, Andhra Pradesh 522124 |<i class="fa fa-whatsapp"></i>
+    <div class="address-bar">Divya Saranu | mygiftbasket4u@gmail.com |<i class="fa fa-whatsapp"></i>
         +91 8128411369</div>
 
     <!-- Navigation -->
@@ -50,7 +50,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html">My Gift Basket 4u</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -59,19 +59,19 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About Us</a>
+                        <a href="personal.html">Personal Gifts</a>
                     </li>
                     <li>
-                        <a href="blog.html">Gift Baskets</a>
+                        <a href="baskets.html">Gift Baskets</a>
                     </li>
                     <li>
-                        <a href="contact.html">Return Gifts</a>
+                        <a href="return.html">Return Gifts</a>
                     </li>
                     <li>
-                        <a href="contact.html">Food</a>
+                        <a href="corporate.html">Corporate Gifts</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact Us</a>
+                        <a href="food.html">Traditional Foods</a>
                     </li>
                 </ul>
             </div>
@@ -86,8 +86,8 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">About
-                        <strong>business casual</strong>
+                    <h2 class="intro-text text-center">
+                        <strong>Corporate Gifts</strong>
                     </h2>
                     <hr>
                 </div>
@@ -95,9 +95,10 @@
                     <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
                 </div>
                 <div class="col-md-6">
-                    <p>This is a great place to introduce your company or project and describe what you do.</p>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>
+                        Corporate Gifts include gifts for any occasion or festival
+                        which the employer would like to give to employees.
+                    </p>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -107,8 +108,8 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Our
-                        <strong>Team</strong>
+                    <h2 class="intro-text text-center">
+                        <strong>Samples</strong>
                     </h2>
                     <hr>
                 </div>
