--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
     <div class="brand">My Gift Basket 4u</div>
-    <div class="address-bar">Spp Road | Ponnuru, Andhra Pradesh 522124 |<i class="fa fa-whatsapp"></i>
+    <div class="address-bar">Divya Saranu | mygiftbasket4u@gmail.com |<i class="fa fa-whatsapp"></i>
         +91 8128411369</div>
 
     <!-- Navigation -->
@@ -50,7 +50,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html">My Gift Basket 4u</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -59,19 +59,19 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About Us</a>
+                        <a href="personal.html">Personal Gifts</a>
                     </li>
                     <li>
-                        <a href="blog.html">Gift Baskets</a>
+                        <a href="baskets.html">Gift Baskets</a>
                     </li>
                     <li>
-                        <a href="contact.html">Return Gifts</a>
+                        <a href="return.html">Return Gifts</a>
                     </li>
                     <li>
-                        <a href="contact.html">Food</a>
+                        <a href="corporate.html">Corporate Gifts</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact Us</a>
+                        <a href="food.html">Traditional Foods</a>
                     </li>
                 </ul>
             </div>
@@ -117,13 +117,7 @@
                     <h2 class="brand-before">
                         <small>Welcome to</small>
                     </h2>
-                    <h1 class="brand-name">Business Casual</h1>
-                    <hr class="tagline-divider">
-                    <h2>
-                        <small>By
-                            <strong>Start Bootstrap</strong>
-                        </small>
-                    </h2>
+                    <h1 class="brand-name">My Gift Basket 4u</h1>
                 </div>
             </div>
         </div>
@@ -132,15 +126,19 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Build a website
-                        <strong>worth visiting</strong>
+                    <h2 class="intro-text text-center">Gifting
+                        <strong>MADE SIMPLE</strong>
                     </h2>
                     <hr>
                     <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
                     <hr class="visible-xs">
-                    <p>The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize.</p>
-                    <p>A huge thanks to <a href="http://join.deathtothestockphoto.com/" target="_blank">Death to the Stock Photo</a> for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <p>
+                        GIFT is a representation of your heart for someone. Our gift experts choose gifts from a
+                        wide variety to give you the best possible. We deal personal gifts, gifting baskets, return gifts for all occasions and corporate gifting too.
+                        We deal with targeted manufacturers and wholesalers to provide best price for our clients. There is a special team of women executing our traditional food orders.
+                        So happy for the special woman team for their dedicated service.
+
+                    </p>
                 </div>
             </div>
         </div>
