--- a/personal.html
+++ b/personal.html
@@ -143,7 +143,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; mygiftbasket4u 2015</p>
+                    <p>Copyright &copy; mygiftbasket4u 2015 <a href="https://www.facebook.com/groups/730091190435941/">Like Us on Facebook</a></p>
                 </div>
             </div>
         </div>
