--- a/return.html
+++ b/return.html
@@ -36,7 +36,7 @@
 
 <div class="brand">My Gift Basket 4u</div>
 <div class="address-bar">Divya Saranu | mygiftbasket4u@gmail.com |<i class="fa fa-whatsapp"></i>
-    +91 8128411369</div>
+    +91 8128411369 </i> </div>
 
 <!-- Navigation -->
 <nav class="navbar navbar-default" role="navigation">
@@ -144,7 +144,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <p>Copyright &copy; mygiftbasket4u 2015</p>
+                <p>Copyright &copy; mygiftbasket4u 2015 <a href="https://www.facebook.com/groups/730091190435941/">Like Us on Facebook</a></p>
+
             </div>
         </div>
     </div>
